kubernetes_setup/manifests/infver/inf-ver-orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inf-ver-orchestrator
  labels:
    app: inf-ver-orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inf-ver-orchestrator
  template:
    metadata:
      labels:
        app: inf-ver-orchestrator
    spec:
      serviceAccountName: inf-ver-orchestrator
      containers:
        - name: inf-ver-orchestrator
          image: <registry-host>/infver_images/inf-ver-orchestrator:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
