kubernetes_setup/manifests/infver/analytics-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-api
  labels:
    app: analytics-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-api
  template:
    metadata:
      labels:
        app: analytics-api
    spec:
      containers:
        - name: analytics-api
          image: <registry-host>/infver_images/analytics-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8400
          readinessProbe:
            httpGet:
              path: /health
              port: 8400
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8400
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-api
spec:
  selector:
    app: analytics-api
  ports:
    - port: 8400
      targetPort: 8400
