kubernetes_setup/manifests/infver/inf-ver-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inf-ver-ui
  labels:
    app: inf-ver-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inf-ver-ui
  template:
    metadata:
      labels:
        app: inf-ver-ui
    spec:
      containers:
        - name: inf-ver-ui
          image: <registry-host>/infver_images/inf-ver-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: inf-ver-ui
spec:
  selector:
    app: inf-ver-ui
  ports:
    - port: 3000
      targetPort: 3000
