kubernetes_setup/manifests/infver/ledger-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-api
  labels:
    app: ledger-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-api
  template:
    metadata:
      labels:
        app: ledger-api
    spec:
      containers:
        - name: ledger-api
          image: <registry-host>/infver_images/ledger-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ledger-api
spec:
  selector:
    app: ledger-api
  ports:
    - port: 8000
      targetPort: 8000
