kubernetes_setup/manifests/infver/message-writer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-writer
  labels:
    app: message-writer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-writer
  template:
    metadata:
      labels:
        app: message-writer
    spec:
      containers:
        - name: message-writer
          image: <registry-host>/infver_images/message-writer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8100
          readinessProbe:
            tcpSocket:
              port: 8100
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: message-writer
spec:
  selector:
    app: message-writer
  ports:
    - port: 8100
      targetPort: 8100
